@@ -1,43 +1,58 @@
 {
-    "NDTV 24x7": {
-      "channelUrl": "http://bglive-a.bitgravity.com/ndtv/247lo/live/native",
-      "channelLogo": "http://www.lyngsat-logo.com/logo/tv/nn/ndtv_24x7.jpg"
-    },
-    "NDTV PROFIT": {
-      "channelUrl": "http://bglive-a.bitgravity.com/ndtv/prolo/live/native",
-      "channelLogo": "http://www.lyngsat-logo.com/logo/tv/nn/ndtv_profit.jpg"
-    },
-    "NDTV INDIA": {
-      "channelUrl": "http://bglive-a.bitgravity.com/ndtv/indlo/live/native",
-      "channelLogo": "http://www.lyngsat-logo.com/logo/tv/nn/ndtv_india.jpg"
-    },
-    "NDTV HINDU": {
-      "channelUrl": "http://bglive-a.bitgravity.com/ndtv/indhi/live/native",
-      "channelLogo": "http://www.lyngsat-logo.com/logo/tv/nn/ndtv_hindu.jpg"
-    },
-    "NDTV GOOD TIMES": {
-      "channelUrl": "http://bglive-a.bitgravity.com/ndtv/prohi/live/native",
-      "channelLogo": "http://www.lyngsat-logo.com/logo/tv/nn/ndtv_good_times.jpg"
-    },
-    "DUNYA NEWS": {
-      "channelUrl": "rtmp://173.245.68.50/live playpath=cam swfUrl=http://dunyanews.tv/newsite/live_stream/player.swf pageUrl=http://dunyanews.tv/newsite/live_stream/ live=true swfVfy=true",
-      "channelLogo": "http://www.lyngsat-logo.com/logo/tv/dd/dunya_news_tv.jpg"
-    },
-    "PTV NEWS": {
-      "channelUrl": "rtmp://live.server4sale.com/live/PTVnews swfUrl=http://www.pakistanvision.com/swfs/videoPlayer.swf swfVfy=true pageUrl=http://www.ptv.com.pk/livetvnews.asp live=true ",
-      "channelLogo": "http://www.lyngsat-logo.com/logo/tv/pp/ptv_news.jpg"
-    },
-    "Al JAZEERA": {
-      "channelUrl": "rtmp://media2.lsops.net/live/ playpath=aljazeer_en_high.sdp swfUrl=http://www.livestation.com/flash/player/5.4/player.swf pageUrl=http://www.livestation.com/channels/3-al-jazeera-english-english swfVfy=true live=true",
-      "channelLogo": "http://www.lyngsat-logo.com/logo/tv/aa/al_jazeera.jpg"
-    },
-    "CNN": {
-      "channelUrl": "rtmp://media2.lsops.net/live/ playpath=cnn_en_high.sdp swfUrl=http://www.livestation.com/flash/player/5.4/player.swf pageUrl=http://www.livestation.com/channels/66-cnn-international swfVfy=true live=true",
-      "channelLogo": "http://www.lyngsat-logo.com/logo/tv/cc/cnn_usa.jpg"
-    },
-    "BBC NEWS": {
-      "channelUrl": "rtmp://media2.lsops.net/live/ playpath=bbcworld1_en_high.sdp swfUrl=http://www.livestation.com/flash/player/5.4/player.swf pageUrl=http://www.livestation.com/channels/10-bbc-world-news-english swfVfy=true live=true",
-      "channelLogo": "http://www.lyngsat-logo.com/logo/tv/bb/bbc_news.jpg"
-    }
-  
+  "NDTV 24x7": {
+    "channelUrl": "http://bglive-a.bitgravity.com/ndtv/247lo/live/native",
+    "channelLogo": "http://www.lyngsat-logo.com/logo/tv/nn/ndtv_24x7.jpg"
+  },
+  "NDTV PROFIT": {
+    "channelUrl": "http://bglive-a.bitgravity.com/ndtv/prolo/live/native",
+    "channelLogo": "http://www.lyngsat-logo.com/logo/tv/nn/ndtv_profit.jpg"
+  },
+  "NDTV INDIA": {
+    "channelUrl": "http://bglive-a.bitgravity.com/ndtv/indlo/live/native",
+    "channelLogo": "http://www.lyngsat-logo.com/logo/tv/nn/ndtv_india.jpg"
+  },
+  "NDTV HINDU": {
+    "channelUrl": "http://bglive-a.bitgravity.com/ndtv/indhi/live/native",
+    "channelLogo": "http://www.lyngsat-logo.com/logo/tv/nn/ndtv_hindu.jpg"
+  },
+  "NDTV GOOD TIMES": {
+    "channelUrl": "http://bglive-a.bitgravity.com/ndtv/prohi/live/native",
+    "channelLogo": "http://www.lyngsat-logo.com/logo/tv/nn/ndtv_good_times.jpg"
+  },
+  "DUNYA NEWS": {
+    "channelUrl": "rtmp://173.245.68.50/live playpath=cam swfUrl=http://dunyanews.tv/newsite/live_stream/player.swf pageUrl=http://dunyanews.tv/newsite/live_stream/ live=true swfVfy=true",
+    "channelLogo": "http://www.lyngsat-logo.com/logo/tv/dd/dunya_news_tv.jpg"
+  },
+  "PTV NEWS": {
+    "channelUrl": "rtmp://live.server4sale.com/live/PTVnews swfUrl=http://www.pakistanvision.com/swfs/videoPlayer.swf swfVfy=true pageUrl=http://www.ptv.com.pk/livetvnews.asp live=true ",
+    "channelLogo": "http://www.lyngsat-logo.com/logo/tv/pp/ptv_news.jpg"
+  },
+  "Al JAZEERA": {
+    "channelUrl": "rtmp://hd2.lsops.net/live/ playpath=aljazeer_en_838 swfUrl=http://static.ls-cdn.com/player/5.10/plugins/LTSnap.swf pageUrl=http://www.livestation.com/en/aljazeera-english swfVfy=true live=true",
+    "channelLogo": "http://www.lyngsat-logo.com/logo/tv/aa/al_jazeera.jpg"
+  },
+  "CNN": {
+    "channelUrl": "rtmp://hd2.lsops.net/live/ playpath=cnn_en_high.sdp swfUrl=http://www.livestation.com/flash/player/5.4/player.swf pageUrl=http://www.livestation.com/channels/66-cnn-international swfVfy=true live=true",
+    "channelLogo": "http://www.lyngsat-logo.com/logo/tv/cc/cnn_usa.jpg"
+  },
+  "BBC NEWS": {
+    "channelUrl": "rtmp://media2.lsops.net/live/ playpath=bbcworld1_en_high.sdp swfUrl=http://www.livestation.com/flash/player/5.4/player.swf pageUrl=http://www.livestation.com/channels/10-bbc-world-news-english swfVfy=true live=true",
+    "channelLogo": "http://www.lyngsat-logo.com/logo/tv/bb/bbc_news.jpg"
+  },
+  "Reuters": {
+    "channelUrl": "rtmp://media9.lsops.net/reuters/ playpath=reuters_rlsweba_en_medium.sdp swfUrl=http://static.ls-cdn.com/player/5.10/plugins/LTSnap.swf pageUrl=http://www.livestation.com/en/reuters swfVfy=true live=true",
+    "channelLogo": "http://static.ls-cdn.com/uploads/channel/ident/171/reuters.jpg"
+  },
+  "Sky NEWS": {
+    "channelUrl": "rtmp://hd2.lsops.net/live/ playpath=skynewsi_en_372 swfUrl=http://static.ls-cdn.com/player/5.10/plugins/LTSnap.swf pageUrl=http://www.livestation.com/en/sky-news-international swfVfy=true live=true",
+    "channelLogo": "http://static.ls-cdn.com/uploads/channel/ident/144/skynewsi_en.JPG"
+  },
+  "UNHCR": {
+    "channelUrl": "rtmp://media4.lsops.net/unhcr/ playpath=liveloop.sdp swfUrl=http://static.ls-cdn.com/player/5.10/plugins/LTSnap.swf pageUrl=http://www.livestation.com/en/unhcr swfVfy=true live=true",
+    "channelLogo": "http://static.ls-cdn.com/uploads/channel/ident/68/unhcr.jpg"
+  },
+  "intelligence": {
+    "channelUrl": "rtmp://media4.lsops.net/intelligence2/ playpath=playlist swfUrl=http://static.ls-cdn.com/player/5.10/plugins/LTSnap.swf pageUrl=http://www.livestation.com/en/intelligence-squared swfVfy=true live=true",
+    "channelLogo": "http://static.ls-cdn.com/uploads/channel/ident/78/intelligence2.jpg"
+  }
 }
